--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "gulp-stylus": "^2.5.0",
     "gulp-svg-spritesheet": "https://github.com/artem-malko/gulp-svg-spritesheet/archive/master.tar.gz",
     "gulp-svg-symbols": "https://github.com/artem-malko/gulp-svg-symbols/archive/master.tar.gz",
+    "gulp-svg2png": "1.0.2",
     "gulp-uglify": "^1.5.4",
     "gulp-util": "3.0.7",
     "gulp-zip": "^3.2.0",
